[package]
name = "magma"
version = "0.1.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"

[features]
default = []
win = [ "winit" ]

[dependencies]
ash = "^0.31"
cc-traits = "^0.4"
once_cell = "*"
crossbeam-queue = "*"
parking_lot = "*"
maybe-owned = "^0.3"
log = "*"
winit = { version = "^0.24", optional = true }
static_assertions = "^1.1"

[dev-dependencies]
stderrlog = "*"